<resources>
    <string name="app_name">Japanese Word Keeper</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="text_language_en" translatable="false">🇺🇸</string>
    <string name="text_language_es" translatable="false">🇪🇸</string>
    <string name="text_language">Text language</string>
    <string name="text">Text</string>
    <string name="romaji" translatable="false">Romaji</string>
    <string name="emoji_romaji">🔤</string>
    <string name="translation">Translation</string>
    <string name="emoji_translation">🇯🇵</string>
    <string name="emoji_spanish_flag">🇪🇸</string>
    <string name="emoji_us_flag">🇺🇸</string>
    <string-array name="text_languages">
        <item>🇺🇸 English</item>
        <item>🇪🇸 Spanish</item>
    </string-array>
    <string name="phrase_info">Phrase info</string>
    <string name="phrase_analysis">Phrase analysis</string>
    <string name="date_created">Date created</string>
    <string name="date_modified">Date modified</string>
    <string name="date_last_access">Last accessed</string>
    <string name="sorting">Sorting</string>
    <string name="sorting_type">Type</string>
    <string name="sorting_order">Order</string>
    <string name="sorting_order_ascending">Ascending</string>
    <string name="sorting_order_descending">Descending</string>
    <string name="sort_by_date_last_accessed_asc">Date last accessed ▲</string>
    <string name="sort_by_date_last_accessed_desc">Date last accessed ▼</string>
    <string name="error_message_tts_unavailable">Text to speech is unavailable</string>
    <string name="msg_delete_phrase_title">Delete phrase</string>
    <string name="msg_delete_phrase_content">Are you sure you want to delete this phrase?</string>
    <string name="preference_file_name">Preferences</string>
    <string name="preferences_last_text_language_index">last_text_language_index</string>
    <string name="preferences_last_phrase_order">last_phrase_order</string>
    <string name="word_analysis">Word analysis</string>
    <string name="symbols_overview">Symbols overview</string>
    <string name="old_symbol">Old symbol</string>
    <string name="radical">Radical</string>
    <string name="strokes">Strokes</string>
    <string name="grade">Grade</string>
    <string name="year_added">Year added</string>
    <string name="english_meaning">English meaning</string>
    <string name="reading">Reading</string>
    <string name="auto_translate">Auto translate</string>
    <string name="english_to_japanese">English to Japanese</string>
    <string name="spanish_to_japanese">Spanish to Japanese</string>
    <string name="japanese_to_english">Japanese to English</string>
    <string name="japanese_to_spanish">Japanese to Spanish</string>
    <string name="downloading">Downloading...</string>
    <string name="downloaded">Downloaded</string>
    <string name="msg_downloading_languages_check_notifications">Translation languages are being downloaded. Check the notifications for progress...</string>
    <string name="msg_translation_languages_download_finished">Translation languages download finished</string>
    <string name="dictionary">Dictionary</string>
    <string name="search_word_in_english_or_japanese">Search word in english or japanese</string>
    <string name="enter_search_term">Enter search term</string>
    <string name="msg_loading_dictionary">Loading dictionary</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="copy">Copy</string>
    <string name="word">Word</string>
    <string name="definition">Definition</string>
    <string name="definition_and_meanings">Definition and meanings</string>
    <string name="listen">Listen</string>
    <string name="save">Save</string>
    <string name="msg_will_be_implemented_in_upcoming_releases">Will be implemented in upcoming releases</string>
</resources>