<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2pt"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_language" />

        <Space
            android:layout_width="2pt"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/text_languages" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_auto_translate"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/auto_translate" />
    </LinearLayout>

    <View
        android:id="@+id/divider14"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/txt_text_language_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <View
        android:id="@+id/divider15"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2pt"
        android:layout_marginBottom="2pt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2pt"
        android:layout_marginBottom="2pt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_romaji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/romaji" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2pt"
        android:layout_marginBottom="2pt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translation" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>